Рефакторинг, асинхронное убрано, Бэтмен в печали. В остальном всё на финале

--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -231,12 +231,6 @@
     <Compile Include="RunnerForm.Designer.cs">
       <DependentUpon>RunnerForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="InfoMenu\ShowImageForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InfoMenu\ShowImageForm.Designer.cs">
-      <DependentUpon>ShowImageForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="sponsor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -340,9 +334,6 @@
     <EmbeddedResource Include="RunnerForm.resx">
       <DependentUpon>RunnerForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InfoMenu\ShowImageForm.resx">
-      <DependentUpon>ShowImageForm.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="sponsor.resx">
       <DependentUpon>sponsor.cs</DependentUpon>
     </EmbeddedResource>
@@ -408,19 +399,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-упражнение-26.png" />
+    <None Include="Resources\icons_Run.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-краудфандинг-24.png" />
+    <None Include="Resources\icons_Crowdfouning.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-о-нас-26.png" />
+    <None Include="Resources\icons_About.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\icons8-стрелка-влево-641.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\icons8-администратор-240.png" />
+    <None Include="Resources\icons_Admin.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\users_admin.png" />
@@ -438,17 +426,18 @@
     <None Include="Resources\tile_Inventory.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\exit_Admin.png" />
+    <None Include="Resources\aExit.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\Wikivoyage-logo.svg.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\teatro-municipal.jpg" />
+    <None Include="Resources\TeatroMunicipal.jpg" />
     <None Include="Resources\map_PictureBoxLabel.png" />
-    <None Include="Resources\marathon-image.jpg" />
+    <None Include="Resources\MarathonImage.jpg" />
     <None Include="Resources\InteractiveMap.jpg" />
-    <None Include="Resources\pointer.png" />
+    <None Include="Resources\FormLoading.gif" />
+    <Content Include="Resources\icons_back.png" />
+    <None Include="Resources\icons_Results.png" />
+    <None Include="Resources\icons_Pen.png" />
+    <Content Include="Resources\point.png" />
     <Content Include="Resources\project_icon.ico" />
     <None Include="Resources\bmiManBad.png" />
     <None Include="Resources\bmiWomanSoSo.png" />
@@ -461,8 +450,8 @@
     <None Include="Resources\bmiManGood.png" />
     <None Include="Resources\bmiManDefault.png" />
     <None Include="Resources\charityDefaultLogo.png" />
-    <None Include="Resources\woman.png" />
-    <None Include="Resources\man.png" />
+    <None Include="Resources\BMIwoman.png" />
+    <None Include="Resources\BMIman.png" />
     <None Include="Resources\bmiCalc.png" />
     <None Include="Resources\refresh_icon.png" />
   </ItemGroup>
