Выход из App в классе AppClose

--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppClose.cs" />
     <Compile Include="InfoMenu\About.cs">
       <SubType>Form</SubType>
     </Compile>
