Revert "Timer Fix и Рефактор"
This reverts commit 0eef4ecd87dc8cefaa35603e48049b13da32434b.

--- a/SomeProject/SomeProject/SomeProject.csproj
+++ b/SomeProject/SomeProject/SomeProject.csproj
@@ -89,6 +89,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppClose.cs" />
+    <Compile Include="CoordinatorMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CoordinatorMenu.Designer.cs">
+      <DependentUpon>CoordinatorMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="InfoMenu\About.cs">
       <SubType>Form</SubType>
     </Compile>
