--- a/WSR Project/WSR Project/WSR Project.csproj
+++ b/WSR Project/WSR Project/WSR Project.csproj
@@ -51,7 +51,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>project_icon.ico</ApplicationIcon>
+    <ApplicationIcon>Resources\project_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup>
@@ -448,13 +448,11 @@
     <None Include="Resources\MarathonImage.jpg" />
     <None Include="Resources\InteractiveMap.jpg" />
     <None Include="Resources\FormLoading.gif" />
-    <Content Include="MetroFramework.Fonts.dll" />
-    <Content Include="project_icon.ico" />
+    <Content Include="Resources\project_icon.ico" />
     <Content Include="Resources\icons_back.png" />
     <None Include="Resources\icons_Results.png" />
     <None Include="Resources\icons_Pen.png" />
     <Content Include="Resources\point.png" />
-    <Content Include="Resources\project_icon.ico" />
     <None Include="Resources\bmiManBad.png" />
     <None Include="Resources\bmiWomanSoSo.png" />
     <None Include="Resources\bmiWomanLack.png" />
