Транзит сервера, BMI fixes, мелкие исправления

--- a/WSR Project/WSR Project/App.config
+++ b/WSR Project/WSR Project/App.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="WSRProject.Properties.Settings.WSRConnectionString"
-            connectionString="Data Source=tcp:wsrcurse.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=TheEugene;Password=TimCookIsGay7."
+            connectionString="Data Source=tcp:wsr.database.windows.net,1433;Initial Catalog=WSR;Persist Security Info=True;User ID=Kursacheg;Password=Sharaga0264"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
