--- a/WSR Project/WSR Project/WSR Project.csproj
+++ b/WSR Project/WSR Project/WSR Project.csproj
@@ -265,7 +265,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>WSRDataSetVolunteer.xsd</DependentUpon>
     </Compile>
-    <Compile Include="WSRDataSetMAX.Designer.cs">
+    <Compile Include="DataSets\WSRDataSetMAX.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>WSRDataSetMAX.xsd</DependentUpon>
@@ -398,15 +398,15 @@
     <None Include="DataSets\WSRDataSetVolunteer.xss">
       <DependentUpon>WSRDataSetVolunteer.xsd</DependentUpon>
     </None>
-    <None Include="WSRDataSetMAX.xsc">
+    <None Include="DataSets\WSRDataSetMAX.xsc">
       <DependentUpon>WSRDataSetMAX.xsd</DependentUpon>
     </None>
-    <None Include="WSRDataSetMAX.xsd">
+    <None Include="DataSets\WSRDataSetMAX.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>WSRDataSetMAX.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="WSRDataSetMAX.xss">
+    <None Include="DataSets\WSRDataSetMAX.xss">
       <DependentUpon>WSRDataSetMAX.xsd</DependentUpon>
     </None>
   </ItemGroup>
